# react-rust-chrome-starter

./: .eslintrc.cjs  .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
public/: test.js
public/_locales/en/: messages.json
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
src/: manifest.ts  vite-env.d.ts
src/background/: index.ts
src/components/ui/: button.tsx
src/content-script/: index.ts
src/ui/: app.tsx  index.css  main.tsx
