[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Dotan Nahum <dotan@rng0.io>"]
edition = "2021"

[profile.dev]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.36"
yew = { version = "0.20.0", features = ["csr"] }


serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.59"
# reqwest = "0.11.14"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
gloo = "0.8"
# thiserror = "1.0.38"
# regex = "1.7.0"
web-extensions = "0.3.0"
web-extensions-sys = "*"

[dependencies.web-sys]
version = "0.3.63"
features = [
  "console",
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
